--- a/client-test.yaml
+++ b/client-test.yaml
@@ -2,6 +2,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8671/eureka/
-env: test
+env: testtest
 server:
   port: 9501
